// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reports filename when encountering unsupported dynamic dependency 1`] = `"local/file.js:Invalid call at line 3: require(a)"`;

exports[`transforms a module with dependencies 1`] = `
Object {
  "mappings": ";EAAA,YAAY;;EAAC,IAAAA,sBAAA,GAAAC,WAAA,CAAAC,cAAA;EAIb,IAAAC,EAAA,GAAAH,sBAAA,CAAAC,WAAA,CAAAC,cAAA;EAHAE,WAAO,CAAAF,cAAA,UAAM,CAAC;EACdG,SAAS,CAACC,IAAI,CAAC;EACf,IAAMC,CAAC,GAAGH,WAAO,CAAAF,cAAA,QAAI,CAAC;AAAC,G",
  "names": Array [
    "_interopRequireDefault",
    "_$$_REQUIRE",
    "_dependencyMap",
    "_c",
    "require",
    "arbitrary",
    "code",
    "b",
  ],
}
`;

exports[`transforms a module with dependencies 2`] = `
Object {
  "mappings": "AAA",
  "names": Array [
    "<global>",
  ],
}
`;

exports[`transforms a simple module 1`] = `
Object {
  "mappings": ";EAAAA,SAAS,CAACC,IAAI,CAAC;AAAA,G",
  "names": Array [
    "arbitrary",
    "code",
  ],
}
`;

exports[`transforms a simple module 2`] = `
Object {
  "mappings": "AAA",
  "names": Array [
    "<global>",
  ],
}
`;

exports[`transforms a simple script 1`] = `
Object {
  "mappings": ";EAAAA,mBAAmB,CAACC,IAAI,CAAC;AAAA,UAAAC,UAAA,mBAAAA,UAAA,UAAAC,MAAA,mBAAAA,MAAA,UAAAC,MAAA,mBAAAA,MAAA,S",
  "names": Array [
    "someReallyArbitrary",
    "code",
    "globalThis",
    "global",
    "window",
  ],
}
`;

exports[`transforms a simple script 2`] = `
Object {
  "mappings": "AAA",
  "names": Array [
    "<global>",
  ],
}
`;

exports[`transforms an es module with asyncToGenerator 1`] = `
"__d(function (global, _$$_REQUIRE, _$$_IMPORT_DEFAULT, _$$_IMPORT_ALL, module, exports, _dependencyMap) {
  var _interopRequireDefault = _$$_REQUIRE(_dependencyMap[0], \\"@babel/runtime/helpers/interopRequireDefault\\");
  Object.defineProperty(exports, \\"__esModule\\", {
    value: true
  });
  exports.test = test;
  var _asyncToGenerator2 = _interopRequireDefault(_$$_REQUIRE(_dependencyMap[1], \\"@babel/runtime/helpers/asyncToGenerator\\"));
  function test() {
    return _test.apply(this, arguments);
  }
  function _test() {
    _test = (0, _asyncToGenerator2.default)(function* () {});
    return _test.apply(this, arguments);
  }
});"
`;

exports[`transforms an es module with asyncToGenerator 2`] = `
Object {
  "mappings": "AAA,OC",
  "names": Array [
    "<global>",
    "test",
  ],
}
`;

exports[`transforms async generators 1`] = `
"__d(function (global, _$$_REQUIRE, _$$_IMPORT_DEFAULT, _$$_IMPORT_ALL, module, exports, _dependencyMap) {
  var _interopRequireDefault = _$$_REQUIRE(_dependencyMap[0], \\"@babel/runtime/helpers/interopRequireDefault\\");
  Object.defineProperty(exports, \\"__esModule\\", {
    value: true
  });
  exports.test = test;
  var _awaitAsyncGenerator2 = _interopRequireDefault(_$$_REQUIRE(_dependencyMap[1], \\"@babel/runtime/helpers/awaitAsyncGenerator\\"));
  var _wrapAsyncGenerator2 = _interopRequireDefault(_$$_REQUIRE(_dependencyMap[2], \\"@babel/runtime/helpers/wrapAsyncGenerator\\"));
  function test() {
    return _test.apply(this, arguments);
  }
  function _test() {
    _test = (0, _wrapAsyncGenerator2.default)(function* () {
      yield \\"ok\\";
    });
    return _test.apply(this, arguments);
  }
});"
`;

exports[`transforms import/export syntax when experimental flag is on 1`] = `
Object {
  "mappings": ";;;EAAA,IAAOA,CAAC,GAAAC,kBAAA,CAAAC,cAAA;AAAY,G",
  "names": Array [
    "c",
    "_$$_IMPORT_DEFAULT",
    "_dependencyMap",
  ],
}
`;

exports[`transforms import/export syntax when experimental flag is on 2`] = `
Object {
  "mappings": "AAA",
  "names": Array [
    "<global>",
  ],
}
`;
